third_party/move/move-compiler-v2/tests/checking/inlining/script_inline.exp

Diagnostics:
error: inline function cannot be defined in a script
  ┌─ tests/checking/inlining/script_inline.move:2:16
  │
2 │     inline fun outer() {
  │                ^^^^^
