third_party/move/move-compiler-v2/tests/checking/inlining/script_inline.move
script {
    inline fun outer() {
        42;
    }
}
